style: added general tokens

--- a/showcases/patternhub/styles/playgrounds.scss
+++ b/showcases/patternhub/styles/playgrounds.scss
@@ -3,7 +3,7 @@
 section.playground {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr); /* Two columns */
-	gap: 1rem; /* Optional spacing between items */
+	gap: variables.$db-spacing-fixed-xl; /* Optional spacing between items */
 
 	h2 {
 		grid-column: span 2;
@@ -19,7 +19,7 @@ section.playground {
 		img {
 			width: 50px;
 			float: left;
-			margin-inline-end: variables.$db-spacing-fixed-md;
+			margin-inline-end: variables.$db-spacing-fixed-sm;
 		}
 
 		.db-card {
