--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -195,11 +195,17 @@ $db-min-inline-size: var(
 		--db-adaptive-bg-basic-transparent-semi-default: var(
 			--db-#{$variant}-bg-basic-transparent-semi-default
 		);
-		--db-adaptive-bg-basic-transparent-hovered: var(
-			--db-#{$variant}-bg-basic-transparent-hovered
+		--db-adaptive-bg-basic-transparent-full-hovered: var(
+			--db-#{$variant}-bg-basic-transparent-full-hovered
 		);
-		--db-adaptive-bg-basic-transparent-pressed: var(
-			--db-#{$variant}-bg-basic-transparent-pressed
+		--db-adaptive-bg-basic-transparent-full-pressed: var(
+			--db-#{$variant}-bg-basic-transparent-full-pressed
+		);
+		--db-adaptive-bg-basic-transparent-semi-hovered: var(
+			--db-#{$variant}-bg-basic-transparent-semi-hovered
+		);
+		--db-adaptive-bg-basic-transparent-semi-pressed: var(
+			--db-#{$variant}-bg-basic-transparent-semi-pressed
 		);
 		--db-adaptive-on-bg-basic-emphasis-100-default: var(
 			--db-#{$variant}-on-bg-basic-emphasis-100-default
@@ -363,7 +369,7 @@ $input-valid-types:
 			);
 
 		@include helpers.hover {
-			background-color: colors.$db-adaptive-bg-basic-transparent-hovered;
+			background-color: colors.$db-adaptive-bg-basic-transparent-semi-hovered;
 		}
 
 		&:is(input, textarea) {
@@ -485,7 +491,7 @@ $input-valid-types:
 		input {
 			cursor: helpers.$cursor-pointer;
 			background-color: var(
-				--db-adaptive-bg-basic-transparent-#{$variant}
+				--db-adaptive-bg-basic-transparent-full-#{$variant}
 			);
 			@content;
 		}
