--- a/packages/components/src/components/navigation-item/navigation-item.scss
+++ b/packages/components/src/components/navigation-item/navigation-item.scss
@@ -9,7 +9,7 @@
 		text-decoration: none;
 
 		&:focus-visible {
-			// We need to increase the z-index on focus-visible for the outline and box-shadow to appear above the pulse
+			// We need to increase the z-index on focus-visible for the outline and box-shadow to appear above the indicator
 			z-index: 1;
 		}
 	}
