--- a/packages/components/src/styles/internal/_indicator.scss
+++ b/packages/components/src/styles/internal/_indicator.scss
@@ -2,7 +2,7 @@
 @use "@db-ux/core-foundations/build/styles/screen-sizes";
 @use "@db-ux/core-foundations/build/styles/colors";
 
-$puls-background: linear-gradient(
+$indicator-background: linear-gradient(
 	135deg,
 	var(--db-pride-red, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
 		16.7%,
@@ -24,7 +24,7 @@ $puls-background: linear-gradient(
 		0
 );
 
-@mixin set-db-puls-horizontal() {
+@mixin set-indicator-horizontal() {
 	&::after {
 		block-size: variables.$db-border-width-xs;
 		inline-size: 0;
@@ -34,22 +34,22 @@ $puls-background: linear-gradient(
 	}
 }
 
-@mixin set-db-puls-vertical() {
+@mixin set-indicator-vertical() {
 	&::after {
 		block-size: 0;
 		inline-size: variables.$db-border-width-xs;
 		transform: translate(0, -50%);
-		inset-block: var(--db-puls-vertical-inset-block-start, 50%) auto;
+		inset-block: var(--indicator-vertical-inset-block-start, 50%) auto;
 		inset-inline-start: calc(-1 * #{variables.$db-spacing-fixed-xs});
 	}
 }
 
-%db-puls {
+%indicator {
 	&::after {
 		content: "";
 		position: absolute;
 		border-radius: variables.$db-border-radius-xs;
-		background: $puls-background;
+		background: $indicator-background;
 
 		@media screen and (prefers-reduced-motion: no-preference) {
 			transition:
@@ -61,17 +61,17 @@ $puls-background: linear-gradient(
 	}
 }
 
-%db-puls-auto {
-	@extend %db-puls;
+%indicator-auto {
+	@extend %indicator;
 
-	@include set-db-puls-vertical();
+	@include set-indicator-vertical();
 
 	@include screen-sizes.screen("md") {
-		@include set-db-puls-horizontal();
+		@include set-indicator-horizontal();
 	}
 }
 
-@mixin show-db-puls-horizontal() {
+@mixin show-indicator-horizontal() {
 	&::after {
 		block-size: variables.$db-border-width-xs;
 		inline-size: 100%;
@@ -83,9 +83,9 @@ $puls-background: linear-gradient(
 	}
 }
 
-@mixin show-db-puls-vertical() {
+@mixin show-indicator-vertical() {
 	&::after {
-		block-size: var(--db-puls-vertical-block-size, 100%);
+		block-size: var(--indicator-vertical-block-size, 100%);
 		inline-size: variables.$db-border-width-xs;
 
 		@media (forced-colors: active) {
@@ -95,10 +95,10 @@ $puls-background: linear-gradient(
 	}
 }
 
-%show-db-puls-auto {
-	@include show-db-puls-vertical;
+%show-indicator-auto {
+	@include show-indicator-vertical;
 
 	@include screen-sizes.screen("md") {
-		@include show-db-puls-horizontal;
+		@include show-indicator-horizontal;
 	}
 }
