refactor: renamed `data-hide-icon` to `data-show-icon` to match property (#4568)
* refactor: renamed data-hide-icon to data-show-icon to match property

* auto update snapshots (#4569)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* auto update snapshots (#4575)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* auto update snapshots (#4576)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* fix: issue for stencil

* fix: issue for stencil

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Maximilian Franzke <787658+mfranzke@users.noreply.github.com>

--- a/showcases/angular-showcase/src/app/components/input/input.component.html
+++ b/showcases/angular-showcase/src/app/components/input/input.component.html
@@ -25,6 +25,7 @@
 			[disabled]="exampleProps?.disabled"
 			[value]="exampleProps?.value"
 			[icon]="exampleProps?.icon"
+			[showIcon]="exampleProps?.showIcon"
 			[iconTrailing]="exampleProps?.iconTrailing"
 			[showIconTrailing]="exampleProps?.showIconTrailing"
 			[readOnly]="exampleProps?.readOnly"
