--- a/showcases/angular-showcase/src/app/app.component.html
+++ b/showcases/angular-showcase/src/app/app.component.html
@@ -14,7 +14,6 @@
 	>
 		<db-shell-sub-navigation sub-navigation slot="subNavigation">
 			<db-navigation
-				slot="subNavigation"
 				aria-label="sub-navigation"
 				[variant]="settings.subNavigationVariant"
 			>
@@ -54,10 +53,11 @@
 				}
 			</db-navigation>
 		</db-control-panel-desktop>
-		<db-control-panel-mobile control-panel-mobile slot="controlPanelMobile">
-			<ng-container slot="drawerHeadline" drawer-headline>
-				Showcase
-			</ng-container>
+		<db-control-panel-mobile
+			control-panel-mobile
+			slot="controlPanelMobile"
+			drawerHeadlinePlain="Showcase"
+		>
 			<db-control-panel-brand brand slot="brand">
 				Showcase
 			</db-control-panel-brand>
