--- a/packages/components/src/components/accordion-item/index.html
+++ b/packages/components/src/components/accordion-item/index.html
@@ -9,7 +9,9 @@
 		<!-- HTML only component -->
 		<details class="db-accordion-item">
 			<summary>DB Accordion Item</summary>
-			<div class="db-accordion-content">Und hier ist der Content</div>
+			<div class="db-accordion-content" lang="de">
+				Und hier ist der Content
+			</div>
 		</details>
 	</body>
 </html>
