--- a/showcases/angular-showcase/src/app/components/form/form.component.html
+++ b/showcases/angular-showcase/src/app/components/form/form.component.html
@@ -295,7 +295,7 @@
 				</db-tab-panel>
 				<db-tab-panel>Tab Panel 2</db-tab-panel>
 				<db-tab-panel>Tab Panel 3</db-tab-panel>
-				<db-tab-panel>
+				<db-tab-panel lang="la">
 					At vero eos et accusamus et iusto odio dignissimos ducimus
 					qui blanditiis praesentium voluptatum deleniti atque
 					corrupti quos dolores et quas molestias excepturi sint
