refactor: further adaptions

--- a/showcases/angular-showcase/src/app/components/form/form.component.html
+++ b/showcases/angular-showcase/src/app/components/form/form.component.html
@@ -295,7 +295,7 @@
 				</db-tab-panel>
 				<db-tab-panel>Tab Panel 2</db-tab-panel>
 				<db-tab-panel>Tab Panel 3</db-tab-panel>
-				<!-- codespell:ignore -->
+				<!-- codespell-ignore-start -->
 				<db-tab-panel lang="la">
 					At vero eos et accusamus et iusto odio dignissimos ducimus
 					qui blanditiis praesentium voluptatum deleniti atque
@@ -331,6 +331,7 @@
 					greater pleasures, or else he endures pains to avoid worse
 					pains.
 				</db-tab-panel>
+				<!-- codespell-ignore-end -->
 				<db-tab-panel>Tab Panel 5</db-tab-panel>
 			</db-tabs>
 		</dl>
