chore: another try

--- a/packages/components/src/components/accordion-item/index.html
+++ b/packages/components/src/components/accordion-item/index.html
@@ -9,11 +9,11 @@
 		<!-- HTML only component -->
 		<details class="db-accordion-item">
 			<summary>DB Accordion Item</summary>
-			<!-- codespell-ignore-start -->
+			<!-- codespell:ignore-start -->
 			<div class="db-accordion-content" lang="de">
 				Und hier ist der Content
 			</div>
-			<!-- codespell-ignore-end -->
+			<!-- codespell:ignore-end -->
 		</details>
 	</body>
 </html>
