fix: desktop issues

--- a/packages/components/src/components/control-panel-desktop/control-panel-desktop.scss
+++ b/packages/components/src/components/control-panel-desktop/control-panel-desktop.scss
@@ -23,7 +23,7 @@
 		display: inline-block;
 	}
 
-	@include control-panel-desktop.navigation-child {
+	.db-navigation {
 		grid-area: navigation;
 	}
 }
