--- a/packages/components/src/components/navigation-item-group/navigation-item-group-menu-popover.scss
+++ b/packages/components/src/components/navigation-item-group/navigation-item-group-menu-popover.scss
@@ -56,7 +56,7 @@ $outside-position: calc(-200% + #{variables.$db-spacing-fixed-xs});
 		block-size: fit-content;
 		inline-size: fit-content;
 		position: absolute;
-		min-inline-size: navigation-item.$navigation-max-inline-size;
+		min-inline-size: variables.$db-container-xs;
 		// TODO: This causes some flash for angular navigation item group
 		transition: visibility 1ms linear; // workaround to enable focus with keyboard
 
